--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Kotlin-CleanArchitecture</string>
     <string name="title_activity_customers">CustomersActivity</string>
     <string name="customer_title">Customers List</string>
+    <string name="retry">Retry</string>
 </resources>
